--- a/convo-bot-gpt2/convo_gpt.ipynb
+++ b/convo-bot-gpt2/convo_gpt.ipynb
@@ -2,20 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\shash\\anaconda3\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
+    "import math\n",
+    "import gc\n",
     "from transformers import (\n",
     "    AutoTokenizer,\n",
     "    AutoModelForCausalLM,\n",
@@ -71,16 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "gc.collect()\n",
     "torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +262,7 @@
        "[52002 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +284,7 @@
        " 930)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +323,7 @@
        "(4929, 18842)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +346,7 @@
        "})"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +396,7 @@
        "})"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,9 +418,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "62f0dd38276849f9bd73541ed3554bda",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/5201 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "tokenizer.pad_token = tokenizer.eos_token\n",
@@ -437,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -446,7 +455,7 @@
        "1040"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +476,7 @@
        "DataCollatorForLanguageModeling(tokenizer=GPT2TokenizerFast(name_or_path='gpt2', vocab_size=50257, model_max_length=1024, is_fast=True, padding_side='right', truncation_side='right', special_tokens={'bos_token': '<|endoftext|>', 'eos_token': '<|endoftext|>', 'unk_token': '<|endoftext|>', 'pad_token': '<|endoftext|>'}, clean_up_tokenization_spaces=True), mlm=False, mlm_probability=0.15, pad_to_multiple_of=None, tf_experimental_compile=False, return_tensors='pt')"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +551,7 @@
        "log_level=passive,\n",
        "log_level_replica=warning,\n",
        "log_on_each_node=True,\n",
-       "logging_dir=./models/convo_gpt2\\runs\\Dec29_12-14-43_Hebbar,\n",
+       "logging_dir=./models/convo_gpt2\\runs\\Jan07_13-46-48_Hebbar,\n",
        "logging_first_step=False,\n",
        "logging_nan_inf_filter=True,\n",
        "logging_steps=500,\n",
@@ -596,7 +605,7 @@
        ")"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,13 +628,12 @@
     "    report_to=\"none\",\n",
     ")\n",
     "\n",
-    "\n",
     "training_args"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +667,7 @@
        "    <div>\n",
        "      \n",
        "      <progress value='35100' max='35100' style='width:300px; height:20px; vertical-align: middle;'></progress>\n",
-       "      [35100/35100 4:25:42, Epoch 2/3]\n",
+       "      [35100/35100 5:49:47, Epoch 2/3]\n",
        "    </div>\n",
        "    <table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
@@ -962,10 +970,10 @@
     {
      "data": {
       "text/plain": [
-       "TrainOutput(global_step=35100, training_loss=1.6693442202837039, metrics={'train_runtime': 15943.1156, 'train_samples_per_second': 8.806, 'train_steps_per_second': 2.202, 'total_flos': 1.9396275028992e+16, 'train_loss': 1.6693442202837039, 'epoch': 3.0})"
+       "TrainOutput(global_step=35100, training_loss=1.6693442202837039, metrics={'train_runtime': 20988.2038, 'train_samples_per_second': 6.69, 'train_steps_per_second': 1.672, 'total_flos': 1.9396275028992e+16, 'train_loss': 1.6693442202837039, 'epoch': 3.0})"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -976,25 +984,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'config.json'. This can cause undesired inconsistencies in your repo.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'generation_config.json'. This can cause undesired inconsistencies in your repo.\n",
-      "  warnings.warn(\n",
-      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'pytorch_model.bin'. This can cause undesired inconsistencies in your repo.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bef7f57f0f174f09bfb01f852c42f5e4",
+       "model_id": "3b5c94c549b04ab6863aac4bdf349bde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1008,7 +1004,21 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "36d93cf826a0431fbcaff031ffc0b3af",
+       "model_id": "48d7c19da92346b5ab41a263b7c407ef",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "pytorch_model.bin:   0%|          | 0.00/498M [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3191c5dfdb59418f883bbdeb55bcb99f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1021,42 +1031,125 @@
     },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "41d96c0f35f54c8da87dc8eb53de1d9b",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "pytorch_model.bin:   0%|          | 0.00/498M [00:00<?, ?B/s]"
+       "CommitInfo(commit_url='https://huggingface.co/Sharathhebbar24/convo_bot_gpt_v1/commit/17a1d2959229059a8427b3144619546d2ad36f51', commit_message='Upload model', commit_description='', oid='17a1d2959229059a8427b3144619546d2ad36f51', pr_url=None, pr_revision=None, pr_num=None)"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "CommitInfo(commit_url='https://huggingface.co/Sharathhebbar24/convo_bot_gpt2/commit/a6c7c60ca7f41d2a27d29be8986c2ba5bfd13082', commit_message='Upload model', commit_description='', oid='a6c7c60ca7f41d2a27d29be8986c2ba5bfd13082', pr_url=None, pr_revision=None, pr_num=None)"
-      ]
-     },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "MODEL_PATH = \"<HF_USERNAME>/<HF_MODEL_NAME>\"\n",
+    "MODEL_PATH = \"Sharathhebbar24/convo_bot_gpt_v1\"\n",
+    "HF_TOKEN = \"<YOUR HF TOKEN>\"\n",
+    "tokenizer.push_to_hub(\n",
+    "    MODEL_PATH,\n",
+    "    token=HF_TOKEN\n",
+    ")\n",
     "model.push_to_hub(\n",
-    "    MODEL_PATH, token=\"<HF_TOKEN>\"\n",
+    "    MODEL_PATH,\n",
+    "    token=HF_TOKEN\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "results = trainer.evaluate()\n",
+    "print(\"Perplexity:\", results[\"perplexity\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'eval_loss': 1.5569698810577393,\n",
+       " 'eval_runtime': 209.5887,\n",
+       " 'eval_samples_per_second': 24.815,\n",
+       " 'eval_steps_per_second': 12.41,\n",
+       " 'epoch': 3.0}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dataset({\n",
+       "    features: ['input_ids', 'attention_mask'],\n",
+       "    num_rows: 5201\n",
+       "})"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5569698810577393"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eval_loss = results['eval_loss']\n",
+    "eval_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Perplexity: 4.744423275536728\n"
+     ]
+    }
+   ],
+   "source": [
+    "perplexity = math.exp(eval_loss)\n",
+    "print(\"Perplexity:\", perplexity)"
+   ]
   }
  ],
  "metadata": {
@@ -1075,7 +1168,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
