--- a/chat_gpt2/chat_GPT2.ipynb
+++ b/chat_gpt2/chat_GPT2.ipynb
@@ -3,8 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "0jCbJoFMLGzJ",
-    "jp-MarkdownHeadingCollapsed": true
+    "id": "0jCbJoFMLGzJ"
    },
    "source": [
     "# Install Necessary packages\n"
@@ -79,22 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "U9mEYdukK_TY"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\shash\\anaconda3\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
+    "import gc\n",
     "from transformers import (\n",
     "    AutoTokenizer,\n",
     "    AutoModelForCausalLM,\n",
@@ -130,16 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "gc.collect()\n",
     "torch.cuda.empty_cache()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "id": "uzWIDhq-kh4Y"
    },
@@ -587,45 +579,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# len(dataset['messages'][1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset['messages'][256030]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset['messages'][0][0]['role']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a = [\"hi\", \"how\"]\n",
-    "# b = \"abcd\"\n",
-    "# c = \"efgh\"\n",
-    "# b+\"\\n\"+c"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -652,65 +605,6 @@
     "      remove_columns=['query']\n",
     "  )\n",
     "  return tokenized_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "id": "dlIxEtdfasfj"
-   },
-   "outputs": [],
-   "source": [
-    "# # def preprocess(example):\n",
-    "# #   # example['prompt'] = f'{example[\"instruction\"]} {example[\"input\"]} {example[\"output\"]}'\n",
-    "# #   example['prompt'] = f'{example[\"context\"]} {example[\"instruction\"]} {example[\"response\"]}'\n",
-    "# #   return example\n",
-    "\n",
-    "\n",
-    "# def tokenize_datasets(dataset):\n",
-    "#   tokenized_dataset = dataset.map(\n",
-    "#       lambda example: tokenizer(\n",
-    "#           example['prompt'],\n",
-    "#           truncation=True,\n",
-    "#           max_length=128,\n",
-    "#           ),\n",
-    "#       batched=True,\n",
-    "#       remove_columns=['prompt']\n",
-    "#   )\n",
-    "#   return tokenized_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 49,
-     "referenced_widgets": [
-      "dca6ee7b59144eb9912a3ab7d958c8be",
-      "c352eb3b8ba240c98cc3badc848e7342",
-      "c393013c78804946a95b3dc623d00c82",
-      "c22042a0562349de85de1916019044d8",
-      "c716895f36044d49bb16096c8b224d87",
-      "a10efc966eca4223af49eb702bdbdfbe",
-      "b3c3a0e4518346fca973973d14d0123d",
-      "a7f5ddf43adb4399ac7f70436df058c5",
-      "1e1817a1181f4486a7ca8336cae2abc6",
-      "22ddc896e499441aa5a6e884222a15b5",
-      "4dc8e4fa32d649c4b46f34a15b44fd27"
-     ]
-    },
-    "id": "s9RAfI_GasdD",
-    "outputId": "333c99b2-779c-4226-825c-35fe3be74210"
-   },
-   "outputs": [],
-   "source": [
-    "# dataset = dataset.map(\n",
-    "#     prepare_datasets, remove_columns=['prompt', 'prompt_id', 'messages']\t\t\n",
-    "# )\n",
-    "# dataset = dataset.shuffle(42).select(range(50000)).train_test_split(test_size=0.1, seed=42)"
    ]
   },
   {
@@ -782,14 +676,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "id": "iE0BxWHxasbB"
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# train_dataset = dataset['train']\n",
-    "# test_dataset = dataset['test']"
+    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
+    "tokenizer.pad_token = tokenizer.eos_token"
    ]
   },
   {
@@ -862,9 +754,6 @@
    },
    "outputs": [],
    "source": [
-    "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
-    "tokenizer.pad_token = tokenizer.eos_token\n",
-    "\n",
     "train_dataset = tokenize_datasets(train_dataset)\n",
     "test_dataset = tokenize_datasets(test_dataset)"
    ]
@@ -1511,6 +1400,67 @@
    ],
    "source": [
     "trainer.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MODEL_PATH = \"Sharathhebbar24/chat_gpt2\"\n",
+    "HF_TOKEN = \"<YOUR HF TOKEN>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'merges.txt'. This can cause undesired inconsistencies in your repo.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'special_tokens_map.json'. This can cause undesired inconsistencies in your repo.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'tokenizer.json'. This can cause undesired inconsistencies in your repo.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'tokenizer_config.json'. This can cause undesired inconsistencies in your repo.\n",
+      "  warnings.warn(\n",
+      "C:\\Users\\shash\\anaconda3\\lib\\site-packages\\huggingface_hub\\_commit_api.py:282: UserWarning: About to update multiple times the same file in the same commit: 'vocab.json'. This can cause undesired inconsistencies in your repo.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "CommitInfo(commit_url='https://huggingface.co/Sharathhebbar24/chat_gpt2/commit/2d1f29a101a38d244f63c97c68c2872d3216bccf', commit_message='Upload tokenizer', commit_description='', oid='2d1f29a101a38d244f63c97c68c2872d3216bccf', pr_url=None, pr_revision=None, pr_num=None)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer.push_to_hub(\n",
+    "    MODEL_PATH,\n",
+    "    token=HF_TOKEN\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.push_to_hub(\n",
+    "    MODEL_PATH,\n",
+    "    token=HF_TOKEN\n",
+    ")"
    ]
   }
  ],
